<resources>
    <string name="app_name">
        EmpCenter Mobile
    </string>
    <string name="username" translatable="false">
        username
    </string>
    <string name="password" translatable="false">
        password
    </string>
    <string name="pref_category_webapp">
      Login preferences
    </string>

    <string name="pref_change_current_user">
      Current user
    </string>

    <string name="pref_clear_preferences">
      Clear
    </string>

    <string name="pref_clear_button">
      Clear credentials
    </string>

    <string name="label_settings">
      Settings
    </string>

    <string name="label_landing_page">
      Landing Page
    </string>

    <string name="label_operator_page">
      Operator Page
    </string>

    <string name="label_tutorial_page">
      Tutorial Page
    </string>

    <string name="label_tutorial_page_3">
      Tutorial Page 3
    </string>

    <string name="label_tutorial_page_1">
      Tutorial Page 1
    </string>

    <string name="username_hint_text">
        Enter your username
    </string>

</resources>
