<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/tutorial_page">

    <fragment
        android:id="@+id/tutorial_page"
        android:name="com.example.employeeportal.tutorial.FragmentTutorial"
        android:label="@string/label_tutorial_page">
        <action
            android:id="@+id/navigate_to_landing"
            app:destination="@id/landing_page"/>
    </fragment>

    <fragment
        android:id="@+id/tutorial_page_3"
        android:name="com.example.employeeportal.tutorial.fragments.TutorialFragment3"
        android:label="@string/label_tutorial_page_3">
        <action
            android:id="@+id/navigate_to_landing"
            app:destination="@id/landing_page"/>

    </fragment>
    <fragment
        android:id="@+id/tutorial_page_1"
        android:name="com.example.employeeportal.tutorial.fragments.TutorialFragment1"
        android:label="@string/label_tutorial_page_1">

    </fragment>

    <fragment
        android:id="@+id/web_app"
        android:name="com.example.employeeportal.webApp.FragmentWebApp"
        android:label="Weather details">
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@id/settings" />

    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.employeeportal.settings.FragmentSettings"
        android:label="@string/label_settings" />

    <fragment
        android:id="@+id/landing_page"
        android:name="com.example.employeeportal.landingPage.FragmentLanding"
        android:label="@string/label_landing_page" >
        <action
            android:id="@+id/navigate_to_operator"
            app:destination="@id/operator_page" />
        <action
            android:id="@+id/navigate_to_tutorial"
            app:destination="@id/tutorial_page" />
    </fragment>

    <fragment
        android:id="@+id/operator_page"
        android:name="com.example.employeeportal.operations.FragmentOperator"
        android:label="@string/label_operator_page" />



</navigation>